WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105827
Web Inspector: debugger should step into event handler on event dispatch
https://bugs.webkit.org/show_bug.cgi?id=105827
Summary
Web Inspector: debugger should step into event handler on event dispatch
Yury Semikhatsky
Reported
2012-12-28 04:47:34 PST
Created
attachment 180863
[details]
Test case Upstreaming Chromium bug:
http://crbug.com/164010
What steps will reproduce the problem? 1. Load the attached page in chrome 2. Set a breakpoint inside the button click handler 3. Click the button 4. Step into the dispatchEvent call What is the expected result? When stepping into the dispatchEvent call, the debugger enters the div's 'foo' event handler. What happens instead? The debugger skips over the dispatchEvent call.
Attachments
Test case
(574 bytes, text/html)
2012-12-28 04:47 PST
,
Yury Semikhatsky
no flags
Details
Patch
(11.05 KB, patch)
2012-12-28 05:04 PST
,
Yury Semikhatsky
no flags
Details
Formatted Diff
Diff
Patch with comments addressed
(13.53 KB, patch)
2012-12-28 05:42 PST
,
Yury Semikhatsky
no flags
Details
Formatted Diff
Diff
Patch
(16.79 KB, patch)
2012-12-28 06:20 PST
,
Yury Semikhatsky
pfeldman
: review+
webkit-ews
: commit-queue-
Details
Formatted Diff
Diff
Patch with fix for JSC
(17.83 KB, patch)
2012-12-28 06:33 PST
,
Yury Semikhatsky
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Yury Semikhatsky
Comment 1
2012-12-28 05:04:16 PST
Created
attachment 180864
[details]
Patch
Pavel Feldman
Comment 2
2012-12-28 05:18:14 PST
Comment on
attachment 180864
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=180864&action=review
> Source/WebCore/inspector/InspectorDOMDebuggerAgent.cpp:111 > + m_pauseInNextEventListener = false;
You should also clean it up upon existing from the message loop entry.
Yury Semikhatsky
Comment 3
2012-12-28 05:42:13 PST
Created
attachment 180866
[details]
Patch with comments addressed
Yury Semikhatsky
Comment 4
2012-12-28 06:20:38 PST
Created
attachment 180869
[details]
Patch
Early Warning System Bot
Comment 5
2012-12-28 06:24:41 PST
Comment on
attachment 180869
[details]
Patch
Attachment 180869
[details]
did not pass qt-ews (qt): Output:
http://queues.webkit.org/results/15545849
Build Bot
Comment 6
2012-12-28 06:25:25 PST
Comment on
attachment 180869
[details]
Patch
Attachment 180869
[details]
did not pass mac-ews (mac): Output:
http://queues.webkit.org/results/15549810
EFL EWS Bot
Comment 7
2012-12-28 06:25:31 PST
Comment on
attachment 180869
[details]
Patch
Attachment 180869
[details]
did not pass efl-ews (efl): Output:
http://queues.webkit.org/results/15572419
Early Warning System Bot
Comment 8
2012-12-28 06:27:04 PST
Comment on
attachment 180869
[details]
Patch
Attachment 180869
[details]
did not pass qt-wk2-ews (qt): Output:
http://queues.webkit.org/results/15551777
Yury Semikhatsky
Comment 9
2012-12-28 06:33:12 PST
Created
attachment 180870
[details]
Patch with fix for JSC
Yury Semikhatsky
Comment 10
2012-12-28 06:43:34 PST
Committed
r138534
: <
http://trac.webkit.org/changeset/138534
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug