Web Inspector: debugger should step into event handler on event dispatch https://bugs.webkit.org/show_bug.cgi?id=105827

Reviewed by Pavel Feldman.

Source/WebCore:

Added m_pauseInNextEventListener to InspectorDOMDebuggerAgent. The flag is set
to true when "step into" is pressed and reset to false when either JS execution
pauses, the agent gets disabled or JS call stack becomes empty. If the flag is
true and the next JS stetement to be executed belongs to a JS event listener we
will stop in that listener, otherwise we have two options:
  1) Control flow directly(without comming through the native bindings) reaches some JS
     statement and will pause in the corresponding JS function, in which case the
     flag will be reset;
  2) JS call stack becomes empty and execution will continue in the native code. We
     use didProcessTask to detect such cases and reset the flag to false every time
     event queue finishes next task.

Test: inspector/debugger/debugger-step-into-event-listener.html

* inspector/InspectorController.cpp:
(WebCore::InspectorController::InspectorController):
(WebCore::InspectorController::reportMemoryUsage):
(WebCore::InspectorController::didProcessTask):
* inspector/InspectorController.h:
(WebCore):
(InspectorController):
* inspector/InspectorDOMDebuggerAgent.cpp:
(WebCore::InspectorDOMDebuggerAgent::InspectorDOMDebuggerAgent):
(WebCore::InspectorDOMDebuggerAgent::stepInto):
(WebCore):
(WebCore::InspectorDOMDebuggerAgent::didPause):
(WebCore::InspectorDOMDebuggerAgent::cancelStepIntoEventListener):
(WebCore::InspectorDOMDebuggerAgent::pauseOnNativeEventIfNeeded):
(WebCore::InspectorDOMDebuggerAgent::clear):
* inspector/InspectorDOMDebuggerAgent.h:
(InspectorDOMDebuggerAgent):
* inspector/InspectorDebuggerAgent.cpp:
(WebCore::InspectorDebuggerAgent::stepInto):
(WebCore::InspectorDebuggerAgent::didPause):
* inspector/InspectorDebuggerAgent.h:
(Listener):

LayoutTests:

* inspector/debugger/debugger-step-into-event-listener-expected.txt: Added.
* inspector/debugger/debugger-step-into-event-listener.html: Added.

Canonical link: https://commits.webkit.org/124018@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138534 268f45cc-cd09-0410-ab3c-d52691b4dbfc