Source/WebCore/inspector/InspectorDOMDebuggerAgent.h
@@ -81,6 +81,8 @@ public:
     void willSendXMLHttpRequest(const String& url);
     void pauseOnNativeEventIfNeeded(bool isDOMEvent, const String& eventName, bool synchronous);
 
+    void didProcessTask();
+
     virtual void clearFrontend();
     virtual void discardAgent();
 
@@ -90,6 +92,8 @@ private:
     // InspectorDebuggerAgent::Listener implementation.
     virtual void debuggerWasEnabled();
     virtual void debuggerWasDisabled();
+    virtual void stepInto();
+    virtual void didPause();
     void disable();
 
     void descriptionForDOMEvent(Node* target, int breakpointType, bool insertion, InspectorObject* description);
@@ -104,6 +108,7 @@ private:
     InspectorDOMAgent* m_domAgent;
     InspectorDebuggerAgent* m_debuggerAgent;
     HashMap<Node*, uint32_t> m_domBreakpoints;
+    bool m_pauseInNextEventListener;
 };
 
 } // namespace WebCore
