Source/WebCore/inspector/InspectorDebuggerAgent.h
@@ -79,6 +79,7 @@ public:
     virtual void restore();
 
     bool isPaused();
+    bool runningNestedMessageLoop();
     void addMessageToConsole(MessageSource, MessageType);
 
     // Part of the protocol.
@@ -124,6 +125,8 @@ public:
         virtual ~Listener() { }
         virtual void debuggerWasEnabled() = 0;
         virtual void debuggerWasDisabled() = 0;
+        virtual void stepInto() = 0;
+        virtual void didPause() = 0;
     };
     void setListener(Listener* listener) { m_listener = listener; }
 
